se agregan validadres de registro, se agregan campos updatedBy y createdBy a los modelosç
