# src/controllers/movies.controller.js
@@ -3,11 +3,14 @@ import Movie from "../models/Movie";
 import Category from "../models/Category";
 import { DEBUG } from "../utils/loggers";
 
+/** GET MOVIES */
 export const getMovies = async (req, res) => {
   try {
-    const { name, genre, order } = req.query;
+    const { name, genre, order, full } = req.query;
     if (name) {
-      const movieByName = await Movie.findOne({ title: name }).populate("characters",{movies:0});
+      const movieByName = await Movie.findOne({ title: name })
+        .populate("characters", { movies: 0 })
+        .populate("updatedBy", { username: 1, _id: 0 });
       return res.status(200).json(movieByName);
     }
     if (genre) {
@@ -19,15 +22,21 @@ export const getMovies = async (req, res) => {
       if (order === "ASC") {
         const moviesASC = await Movie.find({ _id: { $in: moviesArr } }, null, {
           sort: { release: 1 },
-        }).populate("characters",{movies:0});
+        })
+          .populate("characters", { movies: 0 })
+          .populate("updatedBy", { username: 1, _id: 0 });
         return res.status(200).json(moviesASC);
       } else if (order === "DESC") {
         const moviesDESC = await Movie.find({ _id: { $in: moviesArr } }, null, {
           sort: { release: -1 },
-        }).populate("characters",{movies:0});
+        })
+          .populate("characters", { movies: 0 })
+          .populate("updatedBy", { username: 1, _id: 0 });
         return res.status(200).json(moviesDESC);
       } else {
-        const movies = await Movie.find({ _id: { $in: moviesArr } }).populate("characters",{movies:0});
+        const movies = await Movie.find({ _id: { $in: moviesArr } })
+          .populate("characters", { movies: 0 })
+          .populate("updatedBy", { username: 1, _id: 0 });
         return res.status(200).json(movies);
       }
     }
@@ -36,7 +45,7 @@ export const getMovies = async (req, res) => {
         {},
         { _id: 0 },
         { sort: { release: 1 } }
-      ).populate("characters",{movies:0});
+      ).populate("characters", { movies: 0 });
       res.status(200).json(allMoviesASC);
       return;
     }
@@ -45,15 +54,22 @@ export const getMovies = async (req, res) => {
         {},
         { _id: 0 },
         { sort: { release: -1 } }
-      ).populate("characters",{movies:0});
+      ).populate("characters", { movies: 0 });
       res.status(200).json(allMoviesDESC);
       return;
     }
-    const allMovies = await Movie.find({}, { _id: 0 }).populate("characters",{movies:0});
+    if (full === "FULL") {
+      const allMoviesFull = await Movie.find({});
+      res.status(200).json(allMoviesFull);
+    }
+    const allMovies = await Movie.find(
+      {},
+      { title: 1, imgUrl: 1, release: 1, _id: 0 }
+    );
     res.status(200).json(allMovies);
     return;
   } catch (error) {
-    DEBUG(`[getMovies]: ${error}`)
+    DEBUG(`[getMovies]: ${error}`);
     res.status(500).json({ error: "Failed getting movies" });
     return;
   }
@@ -61,6 +77,7 @@ export const getMovies = async (req, res) => {
 
 export const createMovie = async (req, res) => {
   try {
+    const userId = req.userId;
     const movie = await Movie.findOne({ title: req.body.title });
     if (movie)
       return res.status(400).json({ message: "The movie already exists" });
@@ -79,20 +96,24 @@ export const createMovie = async (req, res) => {
     } else {
       newMovie.characters = [];
     }
+    newMovie.createdBy = userId;
+    newMovie.updatedBy = userId;
     const movieC = await Movie.create(newMovie);
     res.status(201).json(movieC);
   } catch (error) {
-    DEBUG(`[createMovies]: ${error}`)
+    DEBUG(`[createMovies]: ${error}`);
     res.status(500).json({ error: "Failed creating movie" });
   }
 };
 
 export const updateByIdMovie = async (req, res) => {
   try {
+    const userId = req.userId;
     const id = req.params.id;
-    const movie = req.body;
+    let movie = req.body;
+    movie.updatedBy = userId;
     const movieU = await Movie.findByIdAndUpdate(id, movie);
-    res.status(200).json({ msg: `movie id:${id} updated` });
+    res.status(200).json({ message: `movie id:${id} updated` });
   } catch (error) {
     res.status(500).json({ error: "Failed updating movie" });
   }
@@ -102,6 +123,6 @@ export const deleteByIdMovie = async (req, res) => {
   try {
     const id = req.params.id;
     const movieD = await Movie.findByIdAndDelete(id);
-    res.status(200).json({ msg: `caharacter id deleted` });
+    res.status(200).json({ message: `caharacter id deleted` });
   } catch (error) {}
 };
